# protobuf-workshop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  generate_protos.sh
lib/protos/: message.proto
src/: main.c
